ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: kube-logging
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.zbj.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kibana
            port:
              number: 5601
